--- a/config/flickr.yml
+++ b/config/flickr.yml
@@ -1,7 +1,8 @@
 # config/flickr.yml
 
-key: => ENV['flickr_key']
-secret: => ENV['flickr_secret']
+key: "4d2cfa44828fa84913a69333cdf31149"
+secret: "920b67d047dc78e6"
 token_cache: "token_cache.yml"
+
 
 
