--- a/config/application.yml
+++ b/config/application.yml
@@ -10,8 +10,8 @@
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 
-SENDGRID_USERNAME: "caansonia"
-SENDGRID_PASSWORD: "Lahore01"
+SENDGRID_USERNAME: "caansoniacaan"
+SENDGRID_PASSWORD: "Lahore02"
 
 flickr_key: "4d2cfa44828fa84913a69333cdf31149"
 flickr_secret: "920b67d047dc78e6"
